Fix for the loading animation on IE11.

--- a/src/components/styles/PlanTable.css
+++ b/src/components/styles/PlanTable.css
@@ -138,6 +138,7 @@
     font-weight: 700;
     line-height: 0.85em;
     min-height: 51px;
+    height: 50px;
     position: relative;
     margin-bottom: 10px;
 
